--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/server.ts ",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "start node ./src/server.ts"
+    "start": "node ./src/server.ts"
   },
   "keywords": [],
   "author": "",
