--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
+  "type": "module",
   "name": "cocktail-recipes",
   "version": "1.0.0",
   "description": "cocktail-recipes",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
     "dev": "node -r dotenv/config src/server.ts ",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-ts": "tsc",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
-    "serve": "node -r dotenv/config ./src/server.ts",
-    "watch-node": "nodemon -r dotenv/config ./src/server.ts",
+    "serve": "node -r dotenv/config  src/server.js",
+    "watch-node": "nodemon -r dotenv/config src/server.js",
     "watch-ts": "tsc -w"
   },
   "engines": {
@@ -51,6 +52,5 @@
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
-  },
-  "type": "module"
+  }
 }
