--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "cocktail-recipes",
   "main": "index.js",
   "scripts": {
+    "build": "rimraf dist && tsc",
+    "postinstall": "npm run build",
+    "start": "node dist/server.js",
+    "start:dev": "node dist/server.js",
     "dev": "nodemon src/server.ts ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.11",
     "@types/passport": "^1.0.6",
     "@types/passport-facebook": "^2.1.10",
     "@types/passport-google-oauth20": "^2.0.7",
@@ -30,7 +35,7 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "@types/express": "^4.17.11"
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
